--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <h2>Photography by Gregory Powers</h2>
 
     <div class="links">
-      <a class="link-btn" href="https://pwrs.pics" target="_blank">PWRS.PICS Portfolio</a>
+      <a class="link-btn" href="https://pwrs.pics" target="_blank">pwrs.pics Portfolio</a>
       <a class="link-btn" href="https://www.instagram.com/pwrspics" target="_blank">Instagram</a>
       <a class="link-btn" href="https://www.threads.net" target="_blank">Threads</a>
       <a class="link-btn" href="mailto:gregorypowers.photography@gmail.com" target="_blank">Contact Me</a>
